Updated text to match resume

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <a href="#about" class="fas fa-user">
                 <span>About</span>
             </a>
-            <a href="#projects" class="fas fa-file-code">
-                <span>Projects</span>
-            </a>
             <a href="#work" id="link_work" class="fas fa-briefcase">
                 <span>Work</span>
+            </a>
+            <a href="#projects" class="fas fa-file-code">
+                <span>Projects</span>
             </a>
             <a href="#app" id="link_app" class="fas fa-mobile">
                 <span>iOS App</span>
@@ -83,7 +83,7 @@
                         <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Engineering
                             Intern</a>
                         <br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a>
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Software Engineer</a>
                         <br />
                         <a style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a>
                         <br />
@@ -111,7 +111,7 @@
                     Over Summer 2019, I interned at an early-stage startup as a Machine Learning Intern and worked on
                     developing classification models using computer vision techniques in TensorFlow 2. I used transfer
                     learning on many models including InceptionV3 and ResNet-152. Along the way, I scraped for images
-                    and created a video annotation tool using opencv2. I also synthesized 40k randomized simulated
+                    and created a video annotation tool using opencv2. I also generated 40k randomized simulated
                     images for training after learning to use Blender.
                 </p>
                 <p>
@@ -143,70 +143,72 @@
             <!-- Projects -->
             <article id="projects" class="panel">
                 <header>
-                    <h2>Researching with Prof. Alexandre Bayen</h2>
-                    <h4><i>Traffic Light Coordination using Deep RL</i></h4>
-                    <p>August 2019 - present</p>
+                    <h2>Currently researching traffic light coordination using Deep Reinforcement Learning</h2>
+                    <h4><i>with Prof. Alexandre Bayen</i></h4>
+                    <p>August 2019 – present</p>
                 </header>
                 <header>
-                    <h2>Working in a team with Prof. Alexandre Bayen on a Capstone Project</h2>
-                    <h4><i>Applying Deep Multi-Agent Reinforcement Learning on Mixed Autonomy Traffic</i></h4>
-                    <p>August 2018 - May 2019</p>
+                    <h2>Researched how to reduce mixed-autonomy traffic congestion using Deep Reinforcement Learning
+                    </h2>
+                    <h4><i>with my Capstone team and Prof. Alexandre Bayen</i></h4>
+                    <p>2018 – 2019</p>
                 </header>
-                At the Mobile Sensing Lab, I worked on an autonomous traffic Capstone team project with Prof. Alexandre
-                Bayen titled 'Applying Deep Multi-Agent Reinforcement Learning on Mixed-Autonomy Traffic.'
-
-                My team's goal was to optimize the behavior of autonomous vehicles to improve a city-scale scenario.
-
-                For this project, we made use of reinforcement learning techniques while improving an open-source
-                framework for mixed-autonomy traffic called Flow that works with SUMO (Simulation of Urban Mobility) and
-                RLlib (Reinforcement Learning Library).
+                Optimized the behavior of autonomous vehicles to improve a city-scale scenario
+                <br><br>
+                Worked in a team to use and improve an open-source traffic control framework called Flow that
+                works with SUMO (traffic simulation software) and RLlib (reinforcement learning Library)
                 <header>
-                    <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png"
-                        alt="Drinks Tracker">
-                    <h2>Drinks Tracker</h2>
-                    <h4>iOS App</h4>
-                    <p>May 2017 - 2018</p>
+                    <a style="cursor:pointer" onclick="$('#link_app').click()">
+                        <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png"
+                            alt="Drinks Tracker">
+                        <h2>Published an iPhone app on the iOS App Store</h2>
+                        <h4><i>Drinks Tracker</i></h4>
+                        <p>2017 – 2018</p>
+                    </a>
                 </header>
+                App uses an algorithm to notify the user about their estimated Blood Alcohol Content (BAC) level
+                <br><br>
+                Created a custom algorithm that calculates the user’s BAC level based on multiple metrics
+                <br><br>
+                Installed by 3.9k+ users with 104k+ impressions
                 <header>
-                    <h2>Machine Learning by Stanford University - Coursera</h2>
+                    <h2>Completed the <i>Machine Learning by Stanford</i> course</h2>
                     <h4>Taught by Andrew Ng, Co-founder, Coursera and Adjunct Professor, Stanford University</h4>
                     <p>Spring 2017</p>
                 </header>
                 <header>
-                    <h2>Data mined a large collection of Reuters articles in Python</h2>
+                    <h2>Analyzed and summarized the text of a diverse collection of Reuters articles in Python</h2>
                     <p>Spring 2016, The Ohio State University</p>
                 </header>
-                Learned and performed textual analysis to summarize the articles
                 Used Beautiful Soup 4 and scikit-learn to implement several clustering and classification algorithms
                 such as DBSCAN, Hierarchical Clustering, Naïve-Bayesian, and K-Nearest Neighbors
+                <br><br>
                 Calculated Jaccard Similarity scores and Mean Squared Error to accurately create association rules
                 <header>
-                    <h2>Voice Analytics Capstone project</h2>
-                    <h4>for PureCloud by Interactive Intelligence</h4>
+                    <h2>Created a voice-based meeting assistant as our Capstone team project</h2>
+                    <h4><i>for PureCloud by Interactive Intelligence</i></h4>
                     <p>Spring 2016, The Ohio State University</p>
                 </header>
-                Performed tokenization using IBM BlueMix after using Google Cloud Speech for voice recognition
-                Analyzed the speech input to automatically create meetings in Google Calendar
-                Worked with the IBM BlueMix, Google Cloud Speech, and Google Calendar APIs along with AWS
+                Analyzed speech during video calls to automatically create meetings in Google Calendar
+                <br><br>
+                Worked with the IBM BlueMix, Google Cloud Speech, and Google Calendar APIs
                 <header>
-                    <h2>Several Android apps</h2>
-                    <h4>Worked with Twitter, Google Calendar, and Google SafeSearch APIs</h4>
-                    <p>2015 - 2016, The Ohio State University</p>
+                    <h2>Developed several Android apps as part of coursework</h2>
+                    <h4>integrated with the Twitter, Google Calendar, and Google SafeSearch APIs</h4>
+                    <p>2015 – 2016, The Ohio State University</p>
                 </header>
                 <header>
                     <img class="image centered web" src="images/qualcomm_hackathon.jpg" alt="'Best Lifesaving Hack’'">
-                    <h2>Won ‘Best Lifesaving Hack’ at Qualcomm’s intern hackathon</h2>
-                    <h4>Created an Android app to visualize sound to assist the hearing impaired using Vuforia for
-                        Augmented
-                        Reality
-                    </h4>
+                    <h2>Won <strong>Best Lifesaving Hack</strong> at Qualcomm’s intern hackathon for an Augmented
+                        Reality app</h2>
                     <p>Summer 2015, Qualcomm</p>
                 </header>
+                Created an Android app to visualize sound to assist the hearing impaired
                 <header>
                     <img class="image centered web" src="images/isaosu.jpg" alt="isaosu.com">
-                    <h2>Indian Students Association</h2>
-                    <h3 style="text-transform:uppercase">Chief of Staff and Webmaster</h3>
-                    <p>2013 - 2016, The Ohio State University</p>
+                    <h2>Organized philanthropic and cultural events for 300+ people</h2>
+                    <h4><i>as Webmaster and Chief of Staff (Indian Students Association)</i></h4>
+                    <p>2013 – 2016, The Ohio State University</p>
                 </header>
                 <header>
                     <img class="image centered web" src="images/uncakd.jpg" alt="uncakd.org">
@@ -224,79 +226,73 @@
             <!-- Work -->
             <article id="work" class="panel">
                 <header>
-                    <h2>LookDeep Health</h2>
-                    <h3 style="text-transform:uppercase">Machine Learning Engineering Intern</h3>
-                    <p>June - August 2019, Oakland, CA</p>
+                    <h2>Machine Learning Engineering Intern</h2>
+                    <h3 style="text-transform:uppercase">LookDeep Health</h3>
+                    <p>Summer 2019, Oakland, CA</p>
                 </header>
-                Developed classification models using computer vision techniques in TensorFlow 2. Achieved an AUC of
-                0.87 and accuracy of 84% despite only having 2.5k training images
-                <br><br>Used transfer learning on InceptionV3 and ResNet-152, and built the training pipeline for my
-                models which used an open-source model versioning system called DVC
-                <br><br>Assisted another intern in developing the end-to-end system from reading images off the camera,
-                serving predictions using TensorFlow Server, and displaying the output to the user in the browser
+                Trained classification models using computer vision techniques with transfer learning on InceptionV3
+                and ResNet-152
+                <br><br>Achieved an AUC of 0.87 and an accuracy of 84% despite only having 2.5k real-world training
+                images
+                <br><br>Built my model’s training pipeline in TensorFlow 2 and learned to use DVC, an open-source model
+                versioning system
+                <br><br>Assisted another intern in developing the end-to-end system from reading images off the camera
+                to
+                serving predictions using TensorFlow Serving and displaying the output inference in the browser
                 <br><br>Scraped images to use for modeling and created a video annotation tool using opencv2 to convert
-                relevant YouTube videos' frames to training images. Also used and contributed to a popular open-source
-                annotation tool called Scalabel (developed at UC Berkeley)
-                <br><br>Learned to use Blender and created 40k randomized synthetic images that could be used directly
-                in
-                training my models
+                relevant YouTube videos’ frames to training images.
+                <br><br>Used and contributed to a popular open-source annotation tool called Scalabel (developed at UC
+                Berkeley)
+                <br><br>Generated 40k randomized simulated images for training after learning to use Blender
                 <header>
-                    <h2>Online Computer Library Center (OCLC)</h2>
-                    <h3 style="text-transform:uppercase">Software Developer</h3>
-                    <p>July 2016 - 2018, Columbus, OH</p>
+                    <h2>Software Engineer</h2>
+                    <h3 style="text-transform:uppercase">OCLC (Online Computer Library Center)</h3>
+                    <p>2016 – 2018, Columbus, OH</p>
                 </header>
-                Improved and innovated on several Java projects used internally and externally for purposes ranging from
-                data retrieval,
-                transformation, and organization to security
-                <br><br>Supported a multi-million dollar international contract by writing utilities that enabled our
-                team
-                to internationalize a webapp in 20+ languages
-                <br><br>Optimized database handling and functionality for compliance with privacy requirements while
-                updating legacy projects to modern technologies such as Spring and SQL
-                <br><br>Achieved our corporate strategy goals by enhancing OAuth authentication services used by OCLC’s
-                enterprise
-                business partners to offer better support of mobile application authentication
-                <br><br>Worked with the Operations team to deploy our webapps successfully in the Production environment
+                Wrote Java code for 7 webapps used by 15k+ administrators for library management (books, media, etc.)
+                <br><br>Updated legacy webapps to use jQuery, connect to a PostgreSQL database, and deploy with Apache
+                Tomcat
+                <br><br>Enhanced OAuth authentication services used by OCLC’s enterprise partners to offer better
+                support for
+                mobile apps
+                <br><br>Supported a $3M+ contract by writing utilities to easily internationalize a webapp in 20+
+                languages
+                <br><br>Optimized database handling and functionality for compliance with GDPR requirements
+                <br><br>Built and deployed our webapps to several QA and Production environments
                 <header>
-                    <h2>Qualcomm Life</h2>
+                    <h2>Interim Engineering Intern</h2>
                     <h3 style="text-transform:uppercase">Interim Engineering Intern</h3>
-                    <p>May - July 2015, San Diego, CA</p>
+                    <p>Summer 2015, San Diego, CA</p>
                 </header>
-                Improved the webapp that I worked on in 2014 based on feedback from the Operations team
-                <br />Created new features to significantly simplify and automate tasks for other team members
-                <br />Used C# to internalize SQL scripts into an ASP.NET application while working together using Visual
-                Studio
-
-                <header>
-                    <h2>Qualcomm Life</h2>
-                    <h3 style="text-transform:uppercase">Interim Technology Intern</h3>
-                    <p>May - August 2014, San Diego, CA</p>
-                </header>
-                Overhauled an internal web-app that is used to manage a consumer-facing website
-                <br /> Resolved and implemented requested user stories to increase operational productivity
-                <br /> Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team
+                Improved my internal webapp from 2014 and created new features to automate tasks for other team
                 members
-                using Team Foundation Server in Visual Studio
-
+                <br><br>Used C# to internalize SQL scripts into an ASP.NET application while collaborating using Team
+                Foundation Server
+                <header>
+                    <h2>Interim Technology Intern</h2>
+                    <h3 style="text-transform:uppercase">Qualcomm</h3>
+                    <p>Summer 2014, San Diego, CA</p>
+                </header>
+                Overhauled an internal webapp (with SQL, HTML5, and JavaScript) used to manage a consumer-facing
+                website
                 <header>
                     <h2>The Ohio State University</h2>
                     <h3 style="text-transform:uppercase">CSE Help Desk Operator</h3>
-                    <p>February 2014 - May 2016, Columbus, OH</p>
+                    <p>2014 – 2016, Columbus, OH</p>
                 </header>
-                Reply to any queries sent to help@cse.ohio-state.edu diligently and in a timely manner
-                <br /> Help students, faculty and professors with their queries and account issues
-                <br /> Print posters for graduate students
-                <br /> Ensure that all the CSE printers (~20) are working perfectly with no paper and ink issues
-
+                Assisted Computer Science professors, faculty, and students with their technical queries and issues
+                <br><br>Replied to any queries sent to help@cse.ohio-state.edu diligently and in a timely manner
+                <br><br>Printed posters for graduate students
+                <br><br>Ensured that all the CSE printers (~20) are working at all times with no paper and ink issues
                 <header>
                     <h2>ICICI Prudential AMC Ltd.</h2>
                     <h3 style="text-transform:uppercase">IT Intern</h3>
                     <p>Summer 2010, Mumbai, India</p>
                 </header>
                 Gained experience programming in work environment
-                <br /> Primarily programmed in ASP.NET and C#
-                <br /> Created websites for inputting and recalling user details
-                <br /> Worked in Microsoft Access to create databases to store user details
+                <br /><br>Primarily programmed in ASP.NET and C#
+                <br /><br>Created websites for inputting and recalling user details
+                <br /><br>Worked in Microsoft Access to create databases to store user details
             </article>
 
             <!-- App -->
