--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <a href="#about" class="fas fa-user">
                 <span>About</span>
             </a>
-            <a href="#work" id="link_work" class="fas fa-briefcase">
-                <span>Work</span>
+            <a href="#experience" id="link_experience" class="fas fa-briefcase">
+                <span>Experience</span>
             </a>
             <a href="#projects" class="fas fa-file-code">
                 <span>Projects</span>
@@ -80,17 +80,17 @@
                             Computer Science
                         </a>
                         <br /><br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Engineering
+                        <a style="cursor:pointer" onclick="$('#link_experience').click()">Machine Learning Engineering
                             Intern</a>
                         <br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Software Engineer</a>
+                        <a style="cursor:pointer" onclick="$('#link_experience').click()">Software Engineer</a>
                         <br />
                         <a style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a>
                         <br />
                         <a href="http://www.osu.edu/" target="_blank">The Ohio State University</a>
                     </p>
                 </header>
-                <a href="#work" class="jumplink pic">
+                <a href="#experience" class="jumplink pic">
                     <img src="images/me.jpg" alt="me!" />
                 </a>
             </article>
@@ -223,8 +223,8 @@
                 </header>
             </article>
 
-            <!-- Work -->
-            <article id="work" class="panel">
+            <!-- Experience -->
+            <article id="experience" class="panel">
                 <header>
                     <h2>Machine Learning Engineering Intern</h2>
                     <h3 style="text-transform:uppercase">LookDeep Health</h3>
