--- a/index.html
+++ b/index.html
@@ -273,8 +273,10 @@
                     <h3 style="text-transform:uppercase">Qualcomm</h3>
                     <p>Summer 2014, San Diego, CA</p>
                 </header>
-                Overhauled an internal webapp (with SQL, HTML5, and JavaScript) used to manage a consumer-facing
-                website
+                Overhauled an internal webapp used to manage a consumer-facing website
+                <br><br>Resolved and implemented requested user stories to increase operational productivity
+                <br><br>Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team
+                members using Team Foundation Server in Visual Studio
                 <header>
                     <h2>The Ohio State University</h2>
                     <h3 style="text-transform:uppercase">CSE Help Desk Operator</h3>
