Minor text fixes

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 to
                 serving predictions using TensorFlow Serving and displaying the output inference in the browser
                 <br><br>Scraped images to use for modeling and created a video annotation tool using opencv2 to convert
-                relevant YouTube videos’ frames to training images.
+                relevant YouTube videos’ frames to training images
                 <br><br>Used and contributed to a popular open-source annotation tool called Scalabel (developed at UC
                 Berkeley)
                 <br><br>Generated 40k randomized simulated images for training after learning to use Blender
