More text fixes

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     Over Summer 2019, I interned at an early-stage startup as a Machine Learning Intern and worked on
                     developing classification models using computer vision techniques in TensorFlow 2. I used transfer
                     learning on many models including InceptionV3 and ResNet-152. Along the way, I scraped for images
-                    and created a video annotation tool using opencv2. I also generated 40k randomized simulated
-                    images for training after learning to use Blender.
+                    and created a video annotation tool using opencv2. I also generated 40k randomized synthetic
+                    training images after learning to use Blender.
                 </p>
                 <p>
                     The MEng program focuses extensively on technical leadership in the industry and so, I am taking
@@ -241,7 +241,7 @@
                 relevant YouTube videos’ frames to training images
                 <br><br>Used and contributed to a popular open-source annotation tool called Scalabel (developed at UC
                 Berkeley)
-                <br><br>Generated 40k randomized simulated images for training after learning to use Blender
+                <br><br>Generated 40k randomized synthetic training images after learning to use Blender
                 <header>
                     <h2>Software Engineer</h2>
                     <h3 style="text-transform:uppercase">OCLC (Online Computer Library Center)</h3>
