Updated work experience

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                     of Engineering program at UC Berkeley.
                 </p>
                 <p>
-                    Over Summer 2019, I interned at an early-stage startup as a Machine Learning Intern and worked on
-                    developing classification models using computer vision techniques in TensorFlow 2. I used transfer
-                    learning on many models including InceptionV3 and ResNet-152. Along the way, I scraped for images
-                    and created a video annotation tool using opencv2. I also generated 40k randomized synthetic
-                    training images after learning to use Blender.
+                    Over Summer 2019, I interned at a startup as a Machine Learning Engineering Intern and trained image
+                    classification models in TensorFlow to predict a hospital bed’s patient-occupancy score. I collected
+                    training data by scraping images and converting YouTube videos using my OpenCV-based video
+                    annotation tool. I also generated 40k randomized synthetic training images after learning to use
+                    Blender. I improved my model using computer vision techniques with transfer learning on InceptionV3.
                 </p>
                 <p>
                     The MEng program focuses extensively on technical leadership in the industry and so, I am taking
@@ -230,18 +230,16 @@
                     <h3 style="text-transform:uppercase">LookDeep Health</h3>
                     <p>Summer 2019, Oakland, CA</p>
                 </header>
-                Trained classification models using computer vision techniques with transfer learning on InceptionV3
-                and ResNet-152
+                Trained image classification models to predict a hospital bed’s patient-occupancy score
                 <br><br>Built my model’s training pipeline in TensorFlow 2 and learned to use DVC, an open-source model
                 versioning system
-                <br><br>Assisted another intern in developing the end-to-end system from reading images off the camera
-                to
-                serving predictions using TensorFlow Serving and displaying the output inference in the browser
-                <br><br>Scraped images to use for modeling and created a video annotation tool using opencv2 to convert
-                relevant YouTube videos’ frames to training images
-                <br><br>Used and contributed to a popular open-source annotation tool called Scalabel (developed at UC
-                Berkeley)
+                <br><br>Collected training data by scraping images and converting YouTube videos using my OpenCV-based
+                video annotation tool. Also used and contributed to Scalabel, an open-source annotation tool
                 <br><br>Generated 40k randomized synthetic training images after learning to use Blender
+                <br><br>Improved my model using computer vision techniques with transfer learning on InceptionV3 and
+                ResNet-152
+                <br><br>Assisted another intern in developing the end-to-end system from reading images off the camera
+                to serving predictions using TensorFlow Serving and displaying the output inference in the browser
                 <header>
                     <h2>Software Engineer</h2>
                     <h3 style="text-transform:uppercase">OCLC (Online Computer Library Center)</h3>
