Updated work experience 2

--- a/index.html
+++ b/index.html
@@ -245,12 +245,9 @@
                     <h3 style="text-transform:uppercase">OCLC (Online Computer Library Center)</h3>
                     <p>2016 – 2018, Columbus, OH</p>
                 </header>
-                Wrote Java code for 7 webapps used by 15k+ administrators for library management (books, media, etc.)
-                <br><br>Updated legacy webapps to use jQuery, connect to a PostgreSQL database, and deploy with Apache
-                Tomcat
-                <br><br>Enhanced OAuth authentication services used by OCLC’s enterprise partners to offer better
-                support for
-                mobile apps
+                Wrote Java code while updating 7 legacy webapps, used by 15k+ administrators for library management
+                (books, media, etc.), to use jQuery, PostgreSQL, and Apache Tomcat
+                <br><br>Enhanced OAuth authentication services used by OCLC’s enterprise partners to support mobile apps
                 <br><br>Supported a $3M+ contract by writing utilities to easily internationalize a webapp in 20+
                 languages
                 <br><br>Optimized database handling and functionality for compliance with GDPR requirements
