Updated work experience 3

--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@
                 </header>
                 Improved my internal webapp from 2014 and created new features to automate tasks for other team
                 members
-                <br><br>Used C# to internalize SQL scripts into an ASP.NET application while collaborating using Team
-                Foundation Server
+                <br><br>Automated tasks using C# to internalize SQL scripts into an ASP.NET application
                 <header>
                     <h2>Interim Technology Intern</h2>
                     <h3 style="text-transform:uppercase">Qualcomm</h3>
