Added project posters

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
                     <p>August 2019 – present</p>
                 </header>
                 <header>
+                    <img class="image centered web" src="images/traffic_deep_rl_capstone.png"
+                        alt="Artificial Intelligence to improve City-scale Traffic Flow">
                     <h2>Researched how to reduce mixed-autonomy traffic congestion using Deep Reinforcement Learning
                     </h2>
                     <h4><i>with my Capstone team and Prof. Alexandre Bayen</i></h4>
@@ -177,14 +179,7 @@
                     <p>Spring 2017</p>
                 </header>
                 <header>
-                    <h2>Analyzed and summarized the text of a diverse collection of Reuters articles in Python</h2>
-                    <p>Spring 2016, The Ohio State University</p>
-                </header>
-                Used Beautiful Soup 4 and scikit-learn to implement several clustering and classification algorithms
-                such as DBSCAN, Hierarchical Clustering, Naïve-Bayesian, and K-Nearest Neighbors
-                <br><br>
-                Calculated Jaccard Similarity scores and Mean Squared Error to accurately create association rules
-                <header>
+                    <img class="image centered web" src="images/voice_analytics_capstone.png" alt="Meeting assistant">
                     <h2>Created a voice-based meeting assistant as our Capstone team project</h2>
                     <h4><i>for PureCloud by Interactive Intelligence</i></h4>
                     <p>Spring 2016, The Ohio State University</p>
@@ -192,6 +187,14 @@
                 Analyzed speech during video calls to automatically create meetings in Google Calendar
                 <br><br>
                 Worked with the IBM BlueMix, Google Cloud Speech, and Google Calendar APIs
+                <header>
+                    <h2>Analyzed and summarized the text of a diverse collection of Reuters articles in Python</h2>
+                    <p>Spring 2016, The Ohio State University</p>
+                </header>
+                Used Beautiful Soup 4 and scikit-learn to implement several clustering and classification algorithms
+                such as DBSCAN, Hierarchical Clustering, Naïve-Bayesian, and K-Nearest Neighbors
+                <br><br>
+                Calculated Jaccard Similarity scores and Mean Squared Error to accurately create association rules
                 <header>
                     <h2>Developed several Android apps as part of coursework</h2>
                     <h4>integrated with the Twitter, Google Calendar, and Google SafeSearch APIs</h4>
