--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <br><br>Assisted another intern in developing the end-to-end system from reading images off the camera
                 to serving predictions using TensorFlow Serving and displaying the output inference in the browser
                 <header>
-                    <h2>Software Engineer</h2>
+                    <h2>Software Engineer (Full Stack)</h2>
                     <h3 style="text-transform:uppercase">OCLC (Online Computer Library Center)</h3>
                     <p>2016 – 2018, Columbus, OH</p>
                 </header>
