--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <h4><i>with my Capstone team and Prof. Alexandre Bayen</i></h4>
                     <p>2018 – 2019</p>
                 </header>
-                Optimized the behavior of autonomous vehicles to improve a city-scale scenario
+                Optimized the behavior of autonomous vehicles to increase average traffic speed in a city-scale scenario
                 <br><br>
                 Worked in a team to use and improve an open-source traffic control framework called Flow that
                 works with SUMO (traffic simulation software) and RLlib (reinforcement learning Library)
