--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <h3 style="text-transform:uppercase">Qualcomm</h3>
                     <p>Summer 2014, San Diego, CA</p>
                 </header>
-                Overhauled an internal webapp used to manage a consumer-facing website
+                Overhauled an internal webapp used to manage a portal which simplified doctor-patient communication
                 <br><br>Resolved and implemented requested user stories to increase operational productivity
                 <br><br>Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team
                 members using Team Foundation Server in Visual Studio
