Improved description of current research

--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
                     <h4><i>with Prof. Alexandre Bayen</i></h4>
                     <p>August 2019 – present</p>
                 </header>
+                Worked in a team to improve an open-source traffic control framework called Flow
+                <br><br>
+                Updated Flow to use AIMSUN’s (traffic simulation software) improved API methods
+                <br><br>
+                Trained with PPO and real-world peak-hour traffic data from Arcadia, CA
+                <br><br>
+                Optimized the time offsets of five arterial traffic lights to increase average traffic speed
                 <header>
                     <img class="image centered web" src="images/traffic_deep_rl_capstone.png"
                         alt="Artificial Intelligence to improve City-scale Traffic Flow">
@@ -158,7 +165,7 @@
                 Optimized the behavior of autonomous vehicles to increase average traffic speed in a city-scale scenario
                 <br><br>
                 Worked in a team to use and improve an open-source traffic control framework called Flow that
-                works with SUMO (traffic simulation software) and RLlib (reinforcement learning Library)
+                simulates traffic with SUMO and trains with Ray
                 <header>
                     <a style="cursor:pointer" onclick="$('#link_app').click()">
                         <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png"
@@ -236,8 +243,9 @@
                 Trained image classification models to predict a hospital bed’s patient-occupancy score
                 <br><br>Built my model’s training pipeline in TensorFlow 2 and learned to use DVC, an open-source model
                 versioning system
-                <br><br>Collected training data by scraping images and converting YouTube videos using my OpenCV-based
-                video annotation tool. Also used and contributed to Scalabel, an open-source annotation tool
+                <br><br>Collected training data by scraping images and converting YouTube videos using a video
+                annotation tool that I built with OpenCV. Also used and contributed to Scalabel, an open-source
+                annotation tool
                 <br><br>Generated 40k randomized synthetic training images after learning to use Blender
                 <br><br>Improved my model using computer vision techniques with transfer learning on InceptionV3 and
                 ResNet-152
